# stock_predictor

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
configs/: config.yaml
data/features/: AAPL_features.parquet
data/raw/news/: AAPL_news.parquet
data/raw/prices/: AAPL.parquet
scripts/: data_validation.py  run_ingestion.py  test_config.py  test_generate_features.py  test_logger.py  test_logistic.py  test_news.py  test_technical_features.py  test_yahoo.py
src/stock_prediction/data_sources/: news_source.py  yahoo_finance.py
src/stock_prediction/features/: technical_features.py
src/stock_prediction/inference/: generate_features.py
src/stock_prediction/ingestion/: fetch_news.py  fetch_prices.py
src/stock_prediction/models/: logistic_model.py
src/stock_prediction/utils/: config.py  data_validation.py  logger.py
